# WebForge

./: CHROMEWEBSTORE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.agents/: AGENTS.md
npm/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
npm/src/: capture.ts  cli.ts  engine.ts  errors.ts  index.ts  models.ts  tokens.ts
public/: manifest.json
python/: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
python/src/webforge/: __init__.py  _engine.py  _version.py  capture.py  cli.py  errors.py  export.py  models.py
python/src/webforge/_resources/: extract_tokens.js
python/tests/: test_cli.py  test_export.py  test_integration.py  test_models.py  test_public_api.py
src/: App.tsx  index.css
src/background/: index.ts
src/content/: index.ts
src/dashboard/: DashboardView.tsx
src/popup/: PopupView.tsx
src/utils/: zipExporter.ts
website/: AGENTS.md  next.config.ts  package-lock.json  package.json
website/public/: llms-full.txt  llms.txt
website/src/app/: CaptureTool.tsx  Meowdoku.tsx  SmoothScroll.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts  structured-data.tsx
website/src/app/api/capture/: route.ts
website/src/app/blog/: layout.tsx  page.tsx  posts.ts
website/src/app/blog/[slug]/: page.tsx
